tests/baselines/reference/emptyGenericParamList.errors.txt
tests/cases/compiler/emptyGenericParamList.ts(2,8): error TS2314: Generic type 'I<T>' requires 1 type argument(s).


==== tests/cases/compiler/emptyGenericParamList.ts (1 errors) ====
    class I<T> {}
    var x: I<>;
           ~~~
!!! error TS2314: Generic type 'I<T>' requires 1 type argument(s).